# base_de_dados_UQ

./: .gitignore  main.py  pyproject.toml
.gemini/: GEMINI.md
.gemini/memory/: project_overview.md
src/google_sheets/: manager.py
